src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer utilities {
  .social-icons-container a img{
    @apply h-[60px] w-[60px];
  }
  .Cards{
    @apply p-[15px] rounded-[20px] shadow-md;
  }
}

:root {
  font-family: 'Open Sans', sans-serif;

  background-color: #18181B;
  color: #f1f1f1;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;


}

body {
  margin: 0;
  display: flex;
  place-items: center;
  min-width: 320px;
  min-height: 100vh;
  margin: 0;
  padding: 1.5em;
}

